2006-08-02 Chris Morley <ob@gaseq.co.uk>
	* src/formats/smilesformat.cpp (ParseSimple)(ParseComplex)
	Accept, with a warning, the illegal aromatic elements
	b [si] [ge] [sb] [bi] [te] [sn]
	
2006-07-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/cmlformat.cpp (BeginElement): Make sure to call
	BeginModify() on a <molecule> tag, since EndModify() is already
	called. Fixes PR#1512054 and probably PR#1523956.

2006-07-21 Chris Morley <ob@gaseq.co.uk>

	* src/obconversion.cpp(AddChemObject): remove compiler warning by
	returning Count!=0 rather than Count.
	
	* src.obutil.cpp(IsApprox): replaced fmin, which is not known to
	MS compiler, with std::min.

2006-07-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/internalcoord.h: New header to encapsulate OBInternalCoord.

	* src/Makefile.am, src/Makefile.in, src/mol.h: Updates for above.

	* src/obutil.h: Remove old-style casts, and minor documentation
	updates. 

	* src/data.h, src/generic.cpp, src/generic.h, src/math/vector3.h
	src/obiter.h: Update to use initialization lists more
	consistently.

	* src/formats/inchiformat.cpp: Use obiter classes to remove
	shadowed temporary variables.

	* src/typer.cpp: Fix bug with aromatic typer claiming errors on
	blank lines. 

	* src/data.cpp: Fix bug with reading data files from versioned
	directories. 

	* data/phmodel.txt, data/phmodel.h: Fix bug with seed charge on
	hydroxamic acid reported by Noel.

2006-07-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/math/vector3.h, src/math/vector3.cpp: (IsApprox) Add new
	method to compare vectors based on approximate floating-point
	comparisons, rather than potentially dangerous == and !=
	operators.

	* src/chiral.cpp: Use vector3::IsApprox instead of ==.

	* src/residue.cpp, src/bond.cpp, src/atom.cpp, src/bond.h: Add
	back needed headers for compilation, removed with yesterday's
	change dividing up mol.h

2006-07-17  Geoffrey Hutchison  <babel@geoffhutchison.net>
