@@ -1,3 +1,11 @@
+2006-08-03 Chris Morley <ob@gaseq.co.uk>
+	* src/formats/smilesformat.cpp (ParseSimple)(ParseComplex)
+	Removed extension labelled "is this safe" and added support for
+	* and [*] as wildcard elements. arom = false was also needed.
+	
+	src/kekulize.cpp(getorden): Treat Te (atNo=52) the same as Se.
+	Allows c1cc[te]c1 to be interpreted as better rubbish.
+
 2006-08-02 Chris Morley <ob@gaseq.co.uk>
 	* src/formats/smilesformat.cpp (ParseSimple)(ParseComplex)
 	Accept, with a warning, the illegal aromatic elements
